--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,7 @@
 /* Add CSS Styling */
+
+.odd {
+    background-color: pink;
+    font-size: 20px;
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}
