--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,19 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.main {
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  justify-content: center;
+  gap: 52px;
+}
+
+.main div {
+  width: 200px;
+  height: auto;
 }
 
 img {
@@ -10,6 +24,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
