add stylings to links and list items
add padding, margin, and gap to links

set list style to none to get rid of bullet points

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -35,4 +35,11 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px;
+  margin: 18px;
+  gap: 18px;
+}
+
+li {
+  list-style-type: none;
 }
