--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -31,6 +31,12 @@ input {
   align-items: center;
 }
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .left-links, .right-links {
   display: flex;
   justify-content: space-between;
