--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -31,6 +31,10 @@ input {
   align-items: center;
 }
 
+.content {
+  text-align: center;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
