add background color to footer

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -41,6 +41,7 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgb(231, 231, 231);
 }
 
 .left-links, .right-links {
