--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -46,7 +46,7 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(231, 231, 231);
+  background-color: #eee;
 }
 
 .left-links, .right-links {
