--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -52,3 +52,14 @@ body {
   border-radius: 4px;
   margin: 48px;
 }
+
+li {
+  list-style-type: none;
+  margin: 16px 0px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
